scripts/staging-template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dashboard-${PR_NAME}
    core: 'true'
    group: hkube
  name: dashboard-${PR_NAME}
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard-${PR_NAME}
  template:
    metadata:
      labels:
        app: dashboard-${PR_NAME}
        group: hkube
    spec:
      containers:
        - env:
            - name: API_SERVER_BACKEND_PATH
              valueFrom:
                configMapKeyRef:
                  key: API_SERVER_BACKEND_PATH
                  name: simulator-configmap
            - name: API_SERVER_BACKEND_DATASOURCES_SERVICE_PATH
              valueFrom:
                configMapKeyRef:
                  key: API_SERVER_BACKEND_DATASOURCES_SERVICE_PATH
                  name: simulator-configmap
            - name: API_SERVER_BACKEND_USE_LOCATION
              valueFrom:
                configMapKeyRef:
                  key: API_SERVER_BACKEND_USE_LOCATION
                  name: simulator-configmap
            - name: API_SERVER_BACKEND_HOST
              valueFrom:
                configMapKeyRef:
                  key: API_SERVER_BACKEND_HOST
                  name: simulator-configmap
            - name: API_SERVER_BACKEND_PORT
              valueFrom:
                configMapKeyRef:
                  key: API_SERVER_BACKEND_PORT
                  name: simulator-configmap
            - name: isSecure
              valueFrom:
                configMapKeyRef:
                  key: API_SERVER_BACKEND_IS_SECURE
                  name: simulator-configmap
            - name: BOARD_PATH
              valueFrom:
                configMapKeyRef:
                  name: simulator-configmap
                  key: BOARD_PATH
            - name: BOARD_USE_LOCATION
              valueFrom:
                configMapKeyRef:
                  name: simulator-configmap
                  key: BOARD_USE_LOCATION
            - name: BOARD_HOST
              valueFrom:
                configMapKeyRef:
                  name: simulator-configmap
                  key: BOARD_HOST
            - name: BOARD_PORT
              valueFrom:
                configMapKeyRef:
                  name: simulator-configmap
                  key: BOARD_PORT
            - name: KIBANA_URL
              valueFrom:
                configMapKeyRef:
                  name: simulator-configmap
                  key: KIBANA_URL
            - name: GRAFANA_URL
              valueFrom:
                configMapKeyRef:
                  name: simulator-configmap
                  key: GRAFANA_URL
            - name: DATA_SOURCE_IS_ENABLE
              valueFrom:
                configMapKeyRef:
                  name: simulator-configmap
                  key: DATA_SOURCE_IS_ENABLE
            - name: VITE_SITEBASEURL
              valueFrom:
                configMapKeyRef:
                  name: simulator-configmap
                  key: VITE_SITEBASEURL
            - name: ELASTICSEARCH_STRUCTURED_PREFIX
              valueFrom:
                configMapKeyRef:
                  name: simulator-configmap
                  key: ELASTICSEARCH_STRUCTURED_PREFIX
            - name: ELASTICSEARCH_LOGS_INDEX
              valueFrom:
                configMapKeyRef:
                  name: simulator-configmap
                  key: ELASTICSEARCH_LOGS_INDEX
            - name: VITE_KEYCLOAK_ENABLE
              valueFrom:
                configMapKeyRef:
                  name: simulator-configmap
                  key: VITE_KEYCLOAK_ENABLE
            - name: VITE_HEALTH_MONITORING_ENABLED
              valueFrom:
                configMapKeyRef:
                  name: simulator-configmap
                  key: VITE_HEALTH_MONITORING_ENABLED
            - name: VITE_INACTIVE_CHECK_MS
              valueFrom:
                configMapKeyRef:
                  name: simulator-configmap
                  key: VITE_INACTIVE_CHECK_MS
            - name: NAMESPACE
              valueFrom:
                fieldRef:
                  apiVersion: v1
                  fieldPath: metadata.namespace
            - name: HKUBE_BASE_URL
              value: /hkube/dashboard-${PR_NAME}
          image: hkube/simulator:${IMAGE_TAG}
          imagePullPolicy: Always
          name: simulator
          ports:
            - containerPort: 9050
              protocol: TCP
          resources:
            limits:
              cpu: 100m
              memory: 256Mi
      restartPolicy: Always

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
  labels:
    app: dashboard-${PR_NAME}
    core: 'true'
    group: hkube
    heritage: Tiller
    release: hkube
  name: dashboard-${PR_NAME}
  namespace: default
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: dashboard-${PR_NAME}
                port:
                  number: 9050
            path: /hkube/dashboard-${PR_NAME}(/|$)(.*)
            pathType: ImplementationSpecific

---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: 2019-07-24T09:12:55Z
  labels:
    app: dashboard-${PR_NAME}
    core: 'true'
    group: hkube
  name: dashboard-${PR_NAME}
  namespace: default
spec:
  ports:
    - port: 9050
      protocol: TCP
      targetPort: 9050
  selector:
    app: dashboard-${PR_NAME}
